Updated content and images

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
     <div class="site">
       <div class="sidebar" id="sidebar">
         <div class="header">
-          <h1 class="title"><a href="/"><img id="logo" src="/images/Logo.jpg"></a></h1>
+          <h1 class="title"><a href="/"><img id="logo" src="/images/Logo_Full.jpg"></a></h1>
           <span class="tagline">PhD Candidate in Computer Science</span>
 		  <span class="tagline">Human-Computer Interaction Lab</span>
         </div>
@@ -41,9 +41,11 @@
         </div>
         <div class="footer">
           <span id="footer-links">
-            <a href="" class="footer-link">About</a> <span class="separator">&bull;</span>
-            <a href="" class="footer-link">Twitter</a> <span class="separator">&bull;</span>
-            <a href="" class="footer-link">GitHub</a>
+			<a href="mailto:rcompton@ucsc.edu" class="footer-link">Contact</a><span class="separator">&bull;</span>
+            <a href="https://www.linkedin.com/in/ryan-compton-b8a81067/" class="footer-link">LinkedIn</a> <span class="separator">&bull;</span>
+            <!--<a href="" class="footer-link">Twitter</a> <span class="separator">&bull;</span>-->
+            <a href="http://github.com/rcompt" class="footer-link">GitHub</a><span class="separator">&bull;</span>
+			<a href="https://medium.com/@rcompton_56086" class="footer-link">Medium</a>
           </span>
         </div>
       </div>
