--- a/_includes/post.html
+++ b/_includes/post.html
@@ -7,7 +7,8 @@
       <img id="cover-photo" src="/images/{{ page.cover }}">
     </div>
     <div id="info-container">
-      <h1 id="title">{{ page.title }}</h1>
+		<!--<h1 id="title">Ryan James Compton</h1>-->
+      <!--<h1 id="title">{{ page.title }}</h1>-->
       <!--<span id="date">{{ page.date | date_to_string }}</span>-->
     </div>
   </div>
@@ -18,7 +19,7 @@
   <div class="colophon">
     <p>
       <!--<span id="pub-date">Published on {{ page.date | date_to_string }}</span> <span class="separator">&bull;</span>-->
-      <span id="social">Find me on <a href="">Twitter</a>!</span>
+      <!--<span id="social">Find me on <a href="">Twitter</a>!</span>-->
     </p>
   </div>
 </div>
