Added resume footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,7 @@
         <div class="footer">
           <span id="footer-links">
 			<a href="mailto:rcompton@ucsc.edu" class="footer-link">Contact</a><span class="separator">&bull;</span>
+			<a href="https://users.soe.ucsc.edu/~rcompton/compton-resume.pdf" class="footer-link">Resume</a><span class="separator">&bull;</span>
             <a href="https://www.linkedin.com/in/ryan-compton-b8a81067/" class="footer-link">LinkedIn</a> <span class="separator">&bull;</span>
             <!--<a href="" class="footer-link">Twitter</a> <span class="separator">&bull;</span>-->
             <a href="http://github.com/rcompt" class="footer-link">GitHub</a><span class="separator">&bull;</span>
