Updated min-height of image div to percentage instead of pixels

--- a/_includes/post.html
+++ b/_includes/post.html
@@ -3,14 +3,14 @@
     <img src="/images/sidebar-button.png">
   </div>
   <div id="post-info">
-    <div id="cover-photo-container" style="min-height: 324px">
+    <div id="cover-photo-container" style="min-height: 20%">
       <img id="cover-photo" src="/images/{{ page.cover }}">
     </div>
-    <div id="info-container">
+    <!--<div id="info-container">-->
 		<!--<h1 id="title">Ryan James Compton</h1>-->
       <!--<h1 id="title">{{ page.title }}</h1>-->
       <!--<span id="date">{{ page.date | date_to_string }}</span>-->
-    </div>
+    <!--</div>-->
   </div>
 
   <div class="post">
